test/expected/printf_out_of_range.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "printf" "%d\n" "99999999999999999999999999"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "rc=$?"]
  [CompoundListCondition, None]
    [SimpleCommand "printf" "%d\n" "-99999999999999999999"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "rc=$?"]
  [CompoundListCondition, None]
    [SimpleCommand "printf" "%x\n" "0xffffffffffffffffffff"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "rc=$?"]
  [CompoundListCondition, None]
    [SimpleCommand "printf" "%d\n" "42"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "rc=$?"]
[Word
  Unquoted "printf"
]
[Word
  Literal "%d\n"
]
[Word
  Unquoted "99999999999999999999999999"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "rc="
  Variable "?"
]
[Word
  Unquoted "printf"
]
[Word
  Literal "%d\n"
]
[Word
  Unquoted "-99999999999999999999"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "rc="
  Variable "?"
]
[Word
  Unquoted "printf"
]
[Word
  Literal "%x\n"
]
[Word
  Unquoted "0xffffffffffffffffffff"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "rc="
  Variable "?"
]
[Word
  Unquoted "printf"
]
[Word
  Literal "%d\n"
]
[Word
  Unquoted "42"
]
[Word
  Unquoted "echo"
]
[Word
  DoubleQuoted "rc="
  Variable "?"
]
shit: 2:1: error: Builtin `printf`: 99999999999999999999999999: Numerical result out of range.
     2 |  printf '%d\n' 99999999999999999999999999
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
9223372036854775807
rc=1
shit: 4:1: error: Builtin `printf`: -99999999999999999999: Numerical result out of range.
     4 |  printf '%d\n' -99999999999999999999
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
-9223372036854775808
rc=1
shit: 6:1: error: Builtin `printf`: 0xffffffffffffffffffff: Numerical result out of range.
     6 |  printf '%x\n' 0xffffffffffffffffffff
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
7fffffffffffffff
rc=1
42
rc=0
[Code 0]
